section about refactored

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -34,3 +34,11 @@
   align-self: center;
   justify-self: center;
 }
+
+//flexbox for about scss
+
+@mixin flexboxTemplate($flexDirection){
+  display: flex;
+  flex-direction: $flexDirection;
+  justify-content: center;
+}
