--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,170 +1,202 @@
 @use 'variables'as v;
+@use 'mixins' as *;
 
-.keypoints > * {
-  min-height: 50vh;
-}
+section#about {
+  text-align: center;
 
-.keypoints {
-  display: flex;
-  height: 100vh;
-  flex-direction: column-reverse;
-  justify-content:center;
+  .key-points > * {
+    height: 50vh;
+  }
 
-}
+  .key-points {
+    @include flexboxTemplate(column-reverse);
+  }
 
-.bgcImg {
-    margin: 0 auto;
-    width: 100%;
+  .bgcImg {
     background-position: center;
     background-size: cover;
-}
-
-.transformImage {
-  background-image: url("../images/mobile/image-transform.jpg");
-}
-
-.standout {
-  background-image: url("../images/mobile/image-stand-out.jpg");
-}
-
-#about {
-  text-align: center;
-}
-
-.contentBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-    //position: relative;
-
-  h2 {
-    font-family: "Fraunces", serif;
-    font-size: 2rem;
-    padding: 1rem;
-  }
-
-  p {
-    color: v.$neutralVeryDarkGrayishblue;
-    padding: 2rem;
-  }
-
-  .button {
-    position: relative;
-    z-index: 1;
-
-    button {
-      background: transparent;
-      border: none;
-      box-sizing: content-box;
-      color: black;
-      cursor: pointer;
-      display: block;
-      font-family: "Fraunces", serif;
-      font-weight: 900;
-      margin: 0 auto;
-      position: relative;
-      text-transform: uppercase;
-      width: 8rem;
-
-      &::before {
-        background: v.$primarySoftRed;
-        border-radius: v.$borderRadius;
-        bottom: 0;
-        content: "";
-        display: block;
-        height: 6px;
-        position: absolute;
-        width: 100%;
-        z-index: -1;
-      }
-    }
-
-    .yellow {
-      &::before {
-        background: v.$primaryYellow;
-      }
-    }
-  }
-}
-
-.additionalPoints {
-  min-height: 25rem;
-  position: relative;
-  background-size: cover;
-  background-position: center;
-
-    div {
-        position: absolute;
-        bottom: 1rem;
-        left: 1rem;
-        right: 1rem;
-
-    h3 {
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
-    }
-  }
-}
-
-.cherry {
-  background-image: url("../images/mobile/image-graphic-design.jpg");
-  color: v.$primaryDarkDesaturated;
-}
-
-.orange {
-  background-image: url("../images/mobile/image-photography.jpg");
-  color: v.$primaryDarkblue;
-}
-
-//@todo height 100vh for mobile horizontal
-@media (max-width: v.$mobile+1px ),(orientation:landscape){
-
-}
-
-
-@media (min-width: v.$mobile+1px) {
-  #about {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .additionalPoints {
-    background-position: center;
-    width: 50%;
-  }
-
-  .contentBox {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    margin: 0 auto;
     width: 100%;
-  }
-
-    .keypoints {
-        display: flex;
-        height: 70vh;
-      flex-direction: row;
-    }
-
-  .reversed {
-    flex-direction: row-reverse;
   }
 
   .transformImage {
-    background-image: url("../images/desktop/image-transform.jpg");
-
+    background-image: url("../images/mobile/image-transform.jpg");
   }
 
   .standout {
-    background-image: url("../images/desktop/image-stand-out.jpg");
+    background-image: url("../images/mobile/image-stand-out.jpg");
+  }
 
+
+  .contentBox {
+    @include flexboxTemplate(column);
+
+    h2 {
+      font-family: "Fraunces", serif;
+      font-size: 2rem;
+      padding: 1rem;
+    }
+
+    p {
+      color: v.$neutralVeryDarkGrayishblue;
+      padding: 1rem;
+    }
+
+    .button {
+      position: relative;
+      z-index: 1;
+
+      button {
+        background: transparent;
+        border: none;
+        box-sizing: content-box;
+        color: black;
+        cursor: pointer;
+        display: block;
+        font-family: "Fraunces", serif;
+        font-weight: 900;
+        margin: 0 auto;
+        position: relative;
+        text-transform: uppercase;
+        width: 8rem;
+
+        &::before {
+          background: v.$primarySoftRed;
+          border-radius: v.$borderRadius;
+          bottom: 0;
+          content: "";
+          display: block;
+          height: 6px;
+          position: absolute;
+          width: 100%;
+          z-index: -1;
+        }
+      }
+
+      .yellow {
+        &::before {
+          background: v.$primaryYellow;
+        }
+      }
+    }
+  }
+
+  .additional-points {
+    background-position: top;
+    background-size: cover;
+    height: 50vh;
+    position: relative;
+
+    div {
+      left: 1rem;
+      position: absolute;
+      right: 1rem;
+      top: 50%;
+
+      h3 {
+        font-size: 1.5rem;
+        letter-spacing: 1px;
+        margin-bottom: 1rem;
+      }
+
+      p {
+        color: v.$neutralGrayishblue;
+      }
+    }
   }
 
   .cherry {
-    background-image: url("../images/desktop/image-graphic-design.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("../images/mobile/image-graphic-design.jpg");
+    color: v.$primaryWhite;
   }
+
   .orange {
-    background-image: url("../images/desktop/image-photography.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("../images/mobile/image-photography.jpg");
+    color: v.$primaryWhite;
+  }
+
+}
+
+
+@media (max-width: v.$mobile) and (orientation: landscape) {
+
+  section#about {
+    .key-points > * {
+      flex: 1 1;
+      height: 100vh;
+    }
+
+    .key-points {
+      flex-direction: row;
+      height: 100vh;
+    }
+
+    .reversed {
+      flex-direction: row-reverse;
+    }
+
+  }
+}
+
+@media (min-width: v.$mobile+1px) and (orientation: landscape) {
+
+  section#about {
+    .key-points > * {
+      flex: 1 1;
+      height: 50vh;
+    }
+
+    .key-points {
+      flex-direction: row;
+      height: 50vh;
+    }
+
+    .reversed {
+      flex-direction: row-reverse;
+    }
+
+    .additional-points {
+      @include flexboxTemplate(column);
+      background-position: center;
+    }
+
+
+    .transformImage {
+      background-image: url("../images/desktop/image-transform.jpg");
+    }
+
+    .standout {
+      background-image: url("../images/desktop/image-stand-out.jpg");
+    }
+
+    .cherry {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url("../images/desktop/image-graphic-design.jpg");
+    }
+
+    .orange {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url("../images/desktop/image-photography.jpg");
+    }
+
+
+    .contentBox {
+      flex-direction: column;
+
+      h2 {
+        font-family: "Fraunces", serif;
+        font-size: 2rem;
+        padding: 1rem;
+      }
+
+      p {
+        color: v.$neutralVeryDarkGrayishblue;
+        padding: 2rem;
+      }
+
+    }
+
+    .additional-points {
+      height: 50vh;
+    }
+
   }
 }
