--- a/src/scss/header_nav.scss
+++ b/src/scss/header_nav.scss
@@ -63,7 +63,7 @@ header {
         background-color: v.$primaryWhite;
         display: none;
         font-family: "Fraunces", serif;
-        height: 14rem;
+        padding: 1rem;
         left: 50%;
         margin: 0 auto;
         position: absolute;
