--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,7 @@
 // layout
 $mobile: 768px;
 $mobileBreakPoint: 376px;
+$headerExtraBreakPoint: 850px;
 $desktop: 1440px;
 $fontSizeMain: 16px;
 $positionValue: 32px;
