--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,7 +1,8 @@
 @use 'variables'as v;
 @use 'mixins' as *;
 
-section#contact {
+section.contact {
+  min-height: auto;
   padding: 1rem;
   color: v.$neutralGrayishblue;
   display: grid;
