--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -40,6 +40,9 @@ section.contact {
       font-size: 1.5rem;
       color: v.$primaryDarkblue
     }
+    p{
+      padding: 8px 0;
+    }
 
     a {
       text-decoration: underline;
